Prevent auth overflow-y?

--- a/src/AuthLayout/style.module.scss
+++ b/src/AuthLayout/style.module.scss
@@ -5,6 +5,7 @@
 	align-items: stretch;
 	width: 100vw;
 	height: 100vh;
+	overflow-y: hidden;
 
 	@media (max-width: 60em) {
 		position: relative;
